--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "themepark",
   "version": "1.0.0",
-  "description": "",
+  "description": "theme park project",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,10 +9,11 @@
   "author": "Brenda Long",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^16.2.2",
     "grunt": "^1.0.3",
     "grunt-browserify": "^5.3.0",
-    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^21.0.0",
     "matchdep": "^2.0.0"
   }
 }
